tests/models/enum/named/u8/pass/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = "val")]
        value: u8
    },
}
fn main() {}
