tests/models/enum/named/u8/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
         #[field(alias = 1)]
       value: u8
    },
}
fn main() {}
